Add : new view function for post request and add js file and fix existing one

--- a/categories_project/categories_app/templates/index.html
+++ b/categories_project/categories_app/templates/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nested Categories</title>
+    <title>Categories</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
-    <h1>Nested Categories</h1>
+    <h1>Categories</h1>
     <div id="categories">
         {% for category in categories %}
         <div class="category">
